add iterative ptycho widget

--- a/notebooks/iterative-ptychography.ipynb
+++ b/notebooks/iterative-ptychography.ipynb
@@ -1,8 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f4c07306-b8c1-4ec0-8c46-681e3361ed8a",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Iterative Ptychography\n",
+    "authors: [gvarnavides]\n",
+    "date: 2025-01-09\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d7b4872d-05e6-46b4-a90b-754e96c6868a",
    "metadata": {},
    "outputs": [],
@@ -12,92 +24,466 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets\n",
-    "from IPython.display import display\n",
+    "from mpl_toolkits.axes_grid1.anchored_artists import AnchoredSizeBar\n",
     "\n",
+    "from IPython.display import display\n",
+    "import ipywidgets\n",
     "import py4DSTEM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "20133053-f0b2-4bfb-a83c-3c884d7b0826",
+   "execution_count": 2,
+   "id": "6eb91fed-1719-41f4-91f3-d44e3d50e532",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize arrays\n",
-    "ducky = np.load(\"data/clean-ducky-4D.npy\")\n",
-    "amplitudes = np.sqrt(np.fft.ifftshift(ducky.reshape(-1,128,128),axes=(-2,-1)))\n",
+    "corner_shifted_dps = np.fromfile(\"data/FCC-slab-dps-25x25x96x96-float32.npy\",dtype=np.float32).reshape((25,25,96,96))\n",
+    "diffraction_amplitudes = np.sqrt(corner_shifted_dps)\n",
     "\n",
-    "obj_array_init = np.ones((416,416),dtype=np.complex128)\n",
-    "probe_array_init = py4DSTEM.process.phase.utils.ComplexProbe(\n",
-    "    energy=80e3,\n",
-    "    gpts=(128,128),\n",
-    "    sampling=(0.125,0.125),\n",
-    "    semiangle_cutoff=20,\n",
-    "    defocus=500\n",
-    ").build(\n",
-    ")._array\n",
-    "\n",
-    "probe_array_init *= np.sqrt(np.sum(ducky,axis=(-2,-1)).mean((0,1))/128/128)\n",
-    "\n",
-    "overlap_init = np.fft.fft2(probe_array_init)[None]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "09dba7db-cd15-4866-912c-3fb13e5009b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x,y = np.meshgrid(\n",
-    "    np.arange(0,400,16) + 16,\n",
-    "    np.arange(0,400,16) + 16,\n",
-    "    indexing='ij'\n",
-    ")\n",
-    "positions = np.stack((x.ravel(),y.ravel()),axis=-1)\n",
-    "patch_row, patch_col = patch_indices(positions,(128,128),(416,416))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "4e0b1344-1583-44d3-9bc0-ca0b12cf5d4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shuffled_order = np.arange(625)\n",
+    "shape = np.array(diffraction_amplitudes.shape)\n",
+    "scan_gpts, gpts = np.split(shape,2)\n",
+    "unshuffled_order = np.arange(scan_gpts.prod())\n",
+    "shuffled_order = unshuffled_order.copy()\n",
     "np.random.shuffle(shuffled_order)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "671948d8-0fff-408c-b711-7b5c0b0a8c33",
+   "execution_count": 3,
+   "id": "cab083ff-30f7-4c18-8dc2-830d95953527",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def patch_indices(positions, roi_shape, obj_shape):\n",
-    "    \"\"\"Returns the vectorized row/col patch indices.\"\"\"\n",
+    "def overlap_projection(potential, probe):\n",
+    "    \"\"\" \"\"\"\n",
+    "    cmplx_potential = np.exp(1j*potential)\n",
+    "    exit_wave = probe * cmplx_potential\n",
+    "    return exit_wave, cmplx_potential\n",
     "\n",
-    "    sx, sy = roi_shape\n",
-    "    x0 = np.round(positions[:, 0]).astype(\"int\")\n",
-    "    y0 = np.round(positions[:, 1]).astype(\"int\")\n",
+    "def fourier_projection(amplitudes,exit_wave):\n",
+    "    \"\"\" \"\"\"\n",
+    "    exit_wave_fourier = np.fft.fft2(exit_wave)\n",
+    "    modified_exit_wave_fourier = amplitudes * np.exp(1j*np.angle(exit_wave_fourier))\n",
+    "    gradient_fourier = modified_exit_wave_fourier - exit_wave_fourier\n",
+    "    gradient = np.fft.ifft2(gradient_fourier)\n",
+    "    return gradient\n",
     "\n",
-    "    x_ind = np.fft.fftfreq(sx, d=1 / sx).astype(\"int\")\n",
-    "    y_ind = np.fft.fftfreq(sy, d=1 / sy).astype(\"int\")\n",
+    "def forward_operator(potential, probe, amplitudes):\n",
+    "    \"\"\" \"\"\"\n",
+    "    exit_wave, cmplx_potential = overlap_projection(potential,probe)\n",
+    "    gradient = fourier_projection(amplitudes,exit_wave)\n",
+    "    return exit_wave, cmplx_potential, gradient\n",
     "\n",
-    "    row = (x0[:, None, None] + x_ind[None, :, None]) % obj_shape[0]\n",
-    "    col = (y0[:, None, None] + y_ind[None, None, :]) % obj_shape[1]\n",
+    "def gradient_descent(potential, probe, amp, step_size):\n",
+    "    \"\"\" \"\"\"\n",
+    "    exit_wave, cmplx_potential, gradient = forward_operator(potential, probe, amp)\n",
+    "    numerator = -1j*gradient * cmplx_potential.conj() * probe.conj() / real_space_normalization\n",
+    "    scaled_gradient = np.real(numerator)*step_size\n",
+    "    return scaled_gradient\n",
     "\n",
-    "    return row, col"
+    "def positivity_constraint(potential):\n",
+    "    \"\"\" \"\"\"\n",
+    "    return potential.clip(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2747da52-60b0-4542-a8a4-239437892e9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mutate_arrays(\n",
+    "    calculate_gradient=True,\n",
+    "    update_potential=True,\n",
+    "    object_positivity=True,\n",
+    "):\n",
+    "    \"\"\" \"\"\"\n",
+    "    # shift probe\n",
+    "    mutable_arrays[3] = py4DSTEM.process.phase.utils.fft_shift(\n",
+    "        real_space_probe,\n",
+    "        mutable_arrays[0], # probe_xy\n",
+    "    )\n",
+    "    \n",
+    "    # extract amplitude\n",
+    "    i,j = (mutable_arrays[0] // 4).astype(\"int\")\n",
+    "    mutable_arrays[4] = diffraction_amplitudes[i,j]\n",
+    "    \n",
+    "    if calculate_gradient:\n",
+    "        mutable_arrays[5] = gradient_descent(\n",
+    "            mutable_arrays[2], # potential\n",
+    "            mutable_arrays[3], # probe\n",
+    "            mutable_arrays[4], # amp\n",
+    "            step_size\n",
+    "        )\n",
+    "    \n",
+    "        # update potential\n",
+    "        if update_potential:\n",
+    "            mutable_arrays[2] += mutable_arrays[5]\n",
+    "\n",
+    "    if object_positivity:\n",
+    "        mutable_arrays[2] = positivity_constraint(mutable_arrays[2])\n",
+    "\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "49b4db85-40ac-4017-a06c-523a251dddaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampling = (0.255,0.255)\n",
+    "q_sampling = 1/gpts[1]/sampling[1]\n",
+    "energy = 80e3\n",
+    "semiangle = 25\n",
+    "defocus = 150\n",
+    "step_size = 1.0\n",
+    "dpi = 72\n",
+    "\n",
+    "real_space_probe = py4DSTEM.process.phase.utils.ComplexProbe(\n",
+    "    energy=energy,\n",
+    "    gpts=gpts,\n",
+    "    sampling=sampling,\n",
+    "    semiangle_cutoff=semiangle,\n",
+    "    defocus=defocus,\n",
+    ").build()._array\n",
+    "\n",
+    "scaled_probe = py4DSTEM.visualize.Complex2RGB(\n",
+    "    real_space_probe,\n",
+    "    vmin=0,\n",
+    "    vmax=1\n",
+    ")\n",
+    "real_space_normalization = np.amax(np.abs(real_space_probe)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fc7cfc69-6615-4328-9fde-7e667fb49200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mutable_arrays = [\n",
+    "    gpts//2, # probe_xy\n",
+    "    shuffled_order, # order\n",
+    "    np.zeros(gpts), # potential\n",
+    "    None, # dummy probe\n",
+    "    None, # dummy amp\n",
+    "    None, # dummy gradient\n",
+    "]\n",
+    "\n",
+    "mutate_arrays(\n",
+    "    calculate_gradient=True,\n",
+    "    update_potential=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b16fd784-de42-42f2-9e90-95b9edc055de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaled_probe = py4DSTEM.visualize.Complex2RGB(\n",
+    "    mutable_arrays[3],\n",
+    "    vmin=0,\n",
+    "    vmax=1\n",
+    ")\n",
+    "\n",
+    "scaled_dp = py4DSTEM.visualize.return_scaled_histogram_ordering(\n",
+    "    np.fft.fftshift(mutable_arrays[4]**2),\n",
+    "    normalize=True,\n",
+    "    vmin=0,\n",
+    "    vmax=1,\n",
+    ")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "62421aba-7b8e-4549-ac0e-4dd9192d1035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_panels(\n",
+    "    plot_probe=True,\n",
+    "    plot_pot=True,\n",
+    "    plot_dp=True,\n",
+    "    plot_grad=True,\n",
+    "):\n",
+    "    \"\"\" \"\"\"\n",
+    "    if plot_probe:\n",
+    "        scaled_probe = py4DSTEM.visualize.Complex2RGB(\n",
+    "            mutable_arrays[3],\n",
+    "            vmin=0,\n",
+    "            vmax=1\n",
+    "        )\n",
+    "        im_probe.set_data(scaled_probe)\n",
+    "\n",
+    "    if plot_pot:\n",
+    "        if np.abs(mutable_arrays[2]).max() > 0:\n",
+    "            scaled_pot = py4DSTEM.visualize.return_scaled_histogram_ordering(\n",
+    "                mutable_arrays[2],\n",
+    "                normalize=True,\n",
+    "                vmin=0.005,\n",
+    "                vmax=0.995,\n",
+    "            )[0]\n",
+    "            im_pot.set_data(scaled_pot)\n",
+    "        else:\n",
+    "            im_pot.set_data(mutable_arrays[2])\n",
+    "\n",
+    "    if plot_dp:\n",
+    "        scaled_dp = py4DSTEM.visualize.return_scaled_histogram_ordering(\n",
+    "            np.fft.fftshift(mutable_arrays[4]**2),\n",
+    "            normalize=True,\n",
+    "            vmin=0,\n",
+    "            vmax=1,\n",
+    "        )[0]\n",
+    "        im_dp.set_data(scaled_dp)\n",
+    "\n",
+    "    if plot_grad:\n",
+    "        im_grad.set_data(mutable_arrays[5])\n",
+    "\n",
+    "    fig.canvas.draw_idle()\n",
+    "    return None\n",
+    "\n",
+    "def add_scalebar(ax, length, sampling, units, color=\"white\", size_vertical=1, pad=0.5):\n",
+    "    \"\"\" \"\"\"\n",
+    "    bar = AnchoredSizeBar(\n",
+    "        ax.transData,\n",
+    "        length,\n",
+    "        f\"{sampling*length:.2f} {units}\",\n",
+    "        \"lower right\",\n",
+    "        pad=pad,\n",
+    "        color=color,\n",
+    "        frameon=False,\n",
+    "        label_top=True,\n",
+    "        size_vertical=size_vertical,\n",
+    "    )\n",
+    "    ax.add_artist(bar)\n",
+    "    return ax, bar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1c985f65-dfa5-4504-b5c0-3334af4760be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualization\n",
+    "with plt.ioff():\n",
+    "    fig,axs = plt.subplots(1,4, figsize=(680/dpi,200/dpi),dpi=dpi)\n",
+    "\n",
+    "im_probe = axs[0].imshow(scaled_probe)\n",
+    "im_pot = axs[1].imshow(mutable_arrays[2],cmap='magma',vmin=0,vmax=1)\n",
+    "im_dp = axs[2].imshow(scaled_dp,cmap='magma')\n",
+    "im_grad = axs[3].imshow(\n",
+    "    mutable_arrays[5],\n",
+    "    cmap='PuOr',\n",
+    "    vmin=-real_space_normalization*2,\n",
+    "    vmax=real_space_normalization*2\n",
+    ")\n",
+    "\n",
+    "# turn off pot and grad\n",
+    "im_pot.set_visible(False)\n",
+    "im_grad.set_visible(False)\n",
+    "axs[1].set_visible(False)\n",
+    "axs[3].set_visible(False)\n",
+    "\n",
+    "titles = [\n",
+    "    \"converged electron probe\",\n",
+    "    \"projected sample potential\",\n",
+    "    \"diffracted probe intensity\",\n",
+    "    \"ptychographic gradient\",\n",
+    "]\n",
+    "\n",
+    "scalebars = [\n",
+    "    {'sampling':sampling[1],'length':5/sampling[1],'units':'Å'},\n",
+    "    {'sampling':sampling[1],'length':5/sampling[1],'units':'Å'},\n",
+    "    {'sampling':q_sampling,'length':1/q_sampling,'units':r'Å$^{-1}$'},\n",
+    "    {'sampling':sampling[1],'length':5/sampling[1],'units':'Å','color':'black'},\n",
+    "]\n",
+    "\n",
+    "for ax, title, bar in zip(\n",
+    "    axs,\n",
+    "    titles,\n",
+    "    scalebars\n",
+    "):\n",
+    "    add_scalebar(ax,**bar)\n",
+    "    ax.set_title(title)\n",
+    "    ax.set_xticks([])\n",
+    "    ax.set_yticks([])\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "fig.canvas.resizable = False\n",
+    "fig.canvas.header_visible = False\n",
+    "fig.canvas.footer_visible = False\n",
+    "fig.canvas.toolbar_visible = True\n",
+    "fig.canvas.layout.width = '680px'\n",
+    "fig.canvas.layout.height = \"225px\"\n",
+    "fig.canvas.toolbar_position = 'bottom'\n",
+    "\n",
+    "def onmove(event):\n",
+    "    \"\"\" \"\"\"\n",
+    "    pos = np.array([event.ydata,event.xdata])\n",
+    "    \n",
+    "    if pos[0] is not None:\n",
+    "        mutable_arrays[0] = pos\n",
+    "        mutate_arrays(\n",
+    "            calculate_gradient = gradient_checkbox.value,\n",
+    "            update_potential = potential_checkbox.value,\n",
+    "            # object_positivity = positivity_checkbox.value,\n",
+    "        )\n",
+    "        update_panels(\n",
+    "            plot_pot = potential_checkbox.value,\n",
+    "            plot_grad = gradient_checkbox.value\n",
+    "        )\n",
+    "\n",
+    "cid = fig.canvas.mpl_connect('motion_notify_event',onmove)\n",
+    "\n",
+    "def reset_potential(*args):\n",
+    "    \"\"\" \"\"\"\n",
+    "    mutable_arrays[2] = np.zeros(gpts)\n",
+    "    mutate_arrays(\n",
+    "        calculate_gradient = gradient_checkbox.value,\n",
+    "        update_potential = False,\n",
+    "        # object_positivity = positivity_checkbox.value,\n",
+    "    )\n",
+    "    update_panels(\n",
+    "        plot_pot = potential_checkbox.value,\n",
+    "        plot_grad = gradient_checkbox.value\n",
+    "    )\n",
+    "\n",
+    "def reset_probe_position(*args):\n",
+    "    \"\"\" \"\"\"\n",
+    "    mutable_arrays[0] = gpts/2\n",
+    "    mutate_arrays(\n",
+    "        calculate_gradient = gradient_checkbox.value,\n",
+    "        update_potential = False,\n",
+    "        # object_positivity = positivity_checkbox.value,\n",
+    "    )\n",
+    "    update_panels(\n",
+    "        plot_pot = potential_checkbox.value,\n",
+    "        plot_grad = gradient_checkbox.value\n",
+    "    )\n",
+    "\n",
+    "style = {'description_width': 'initial'}\n",
+    "layout = ipywidgets.Layout(width=\"170px\",height=\"30px\")\n",
+    "\n",
+    "potential_checkbox = ipywidgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description = \"show potential\",\n",
+    "    style=style,\n",
+    "    layout=layout,\n",
+    "    indent=False,\n",
+    ")\n",
+    "\n",
+    "gradient_checkbox = ipywidgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description = \"show gradient\",\n",
+    "    style=style,\n",
+    "    layout=layout,\n",
+    "    indent=False,\n",
+    ")\n",
+    "\n",
+    "reset_potential_button = ipywidgets.Button(\n",
+    "    description = \"clear potential\",\n",
+    "    style=style,\n",
+    "    layout=layout,\n",
+    ")\n",
+    "reset_potential_button.on_click(reset_potential)\n",
+    "\n",
+    "reset_probe_button = ipywidgets.Button(\n",
+    "    description = \"reset probe position\",\n",
+    "    style=style,\n",
+    "    layout=layout,\n",
+    ")\n",
+    "reset_probe_button.on_click(reset_probe_position)\n",
+    "\n",
+    "# positivity_checkbox = ipywidgets.Checkbox(\n",
+    "#     value=True,\n",
+    "#     description = \"object positivity\",\n",
+    "#     style=style,\n",
+    "#     layout=layout,\n",
+    "#     indent=False,\n",
+    "# )\n",
+    "\n",
+    "def toggle_potential(change):\n",
+    "    new = change['new']\n",
+    "    im_pot.set_visible(new)\n",
+    "    axs[1].set_visible(new)\n",
+    "    fig.canvas.draw_idle()\n",
+    "    return None\n",
+    "    \n",
+    "potential_checkbox.observe(toggle_potential,names='value')\n",
+    "\n",
+    "def toggle_gradient(change):\n",
+    "    new = change['new']\n",
+    "    im_grad.set_visible(new)\n",
+    "    axs[3].set_visible(new)\n",
+    "    fig.canvas.draw_idle()\n",
+    "    return None\n",
+    "    \n",
+    "gradient_checkbox.observe(toggle_gradient,names='value')\n",
+    "\n",
+    "# def toggle_positivity(change):\n",
+    "#     new = change['new']\n",
+    "#     im_pot.set_cmap(\"magma\" if new else \"PiYG\")\n",
+    "#     fig.canvas.draw_idle()\n",
+    "#     return None\n",
+    "    \n",
+    "# positivity_checkbox.observe(toggle_positivity,names='value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "be80f76e-b97d-4718-b744-c3108eef715d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d52e9cb8853497984bbfde53a2d1de1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Canvas(footer_visible=False, header_visible=False, layout=Layout(height='225px', width='680px')…"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| label: app:iterative_ptychography\n",
+    "ipywidgets.VBox(\n",
+    "    [\n",
+    "        fig.canvas,\n",
+    "        ipywidgets.HBox(\n",
+    "            [\n",
+    "                reset_potential_button,\n",
+    "                reset_probe_button,\n",
+    "                potential_checkbox,\n",
+    "                gradient_checkbox,\n",
+    "            ]\n",
+    "        )\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e02f31f9-3520-4c9d-b787-7e8223c1f5ab",
+   "id": "24f3a518-26c0-4a06-b9da-23127cb90d09",
    "metadata": {},
    "outputs": [],
    "source": []
