update supercell widget

--- a/notebooks/atomic-models.ipynb
+++ b/notebooks/atomic-models.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "id": "6b4bd62d-636f-42a1-9323-805f29041825",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,8 @@
     "        layers = 2\n",
     "        z =  np.clip(z // 2,1,np.inf).astype(\"int\")\n",
     "    elif axis == [1,0,0]:\n",
-    "        layers = 1\n",
+    "        layers = 2\n",
+    "        z =  np.clip(z // 2,1,np.inf).astype(\"int\")\n",
     "    else:\n",
     "        raise ValueError()\n",
     "    \n",
@@ -219,8 +220,8 @@
     "\n",
     "    ax1.cla()\n",
     "    ax2.cla()\n",
-    "    top = abtem.show_atoms(cell, ax=ax1, show_periodic=True)\n",
-    "    beam = abtem.show_atoms(cell, ax=ax2, plane='xz', show_periodic=True, legend=True)\n",
+    "    top = abtem.show_atoms(cell, ax=ax1,show_periodic = True)\n",
+    "    beam = abtem.show_atoms(cell, ax=ax2, plane='yz', show_periodic=True, legend=True)\n",
     "    fig.canvas.draw_idle()\n",
     "    \n",
     "    return None"
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "id": "d1226bc3-700c-4bef-8837-5e75cc9bc960",
    "metadata": {},
    "outputs": [],
@@ -240,7 +241,7 @@
     "layout = ipywidgets.Layout(width='325px',height='30px')\n",
     "\n",
     "dropdown = ipywidgets.Dropdown(\n",
-    "    options = [[1,1,0],[1,1,1],[1,0,0]],\n",
+    "    options = [[1,0,0],[1,1,0],[1,1,1]],\n",
     "    value=[1,1,0],\n",
     "    layout=layout,\n",
     "    style=style,\n",
@@ -280,8 +281,8 @@
     "slidervac = ipywidgets.FloatSlider(\n",
     "    orientation='horizontal',\n",
     "    description='vacuum (A): ',\n",
-    "    value=0,\n",
-    "    min=0,\n",
+    "    value=2,\n",
+    "    min=1,\n",
     "    max=10,\n",
     "    step=1,\n",
     "    style = style,\n",
@@ -303,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "id": "0e85f4fc-8cc0-4b23-97e4-88166aadcd7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05365191b95741aab1e7ef5223e50d9f",
+       "model_id": "43c65d85950d485fb1c2d947181b7026",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c8174b-dc6b-4bd6-aa6c-4d11cc688a52",
+   "id": "55816c55-1c16-4aaf-9018-3ff9d9cc2459",
    "metadata": {},
    "outputs": [],
    "source": []
