adding multislice content and widget

--- a/notebooks/scattering-potentials.ipynb
+++ b/notebooks/scattering-potentials.ipynb
@@ -26,7 +26,9 @@
     "import ipywidgets\n",
     "\n",
     "import ase\n",
-    "import abtem"
+    "import abtem\n",
+    "\n",
+    "abtem.config.set({\"dask.lazy\":False});"
    ]
   },
   {
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "d3ff4e6a-ee86-4205-a9fa-8f245a53c10e",
    "metadata": {},
    "outputs": [],
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "1898cb2e-145e-4d2c-95f1-46ea3e0e59d0",
    "metadata": {},
    "outputs": [
@@ -117,7 +119,7 @@
     }
    ],
    "source": [
-    "#| label: app:sliced_potential\n",
+    "# | label: app:sliced_potential\n",
     "\n",
     "potential = abtem.Potential(\n",
     "    Si3N4_orthorhombic,\n",
@@ -125,6 +127,7 @@
     "    slice_thickness = 0.75,\n",
     "    parametrization = 'lobato',\n",
     "    projection = 'finite',\n",
+    ").build(\n",
     ")\n",
     "\n",
     "potential[:5].show(\n",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "6380edad-9fc4-478e-bbff-60d5f5093c35",
    "metadata": {},
    "outputs": [
@@ -155,10 +158,7 @@
    "source": [
     "#| label: app:projected_potential\n",
     "\n",
-    "potential.build(\n",
-    ").compute(\n",
-    "    progress_bar=False,\n",
-    ").show(\n",
+    "potential.show(\n",
     "    figsize=(4,6),\n",
     "    cbar=True\n",
     ");"
