add onclick functionality

--- a/notebooks/multislice-algorithm.ipynb
+++ b/notebooks/multislice-algorithm.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "1d162350-94ea-4f7e-9026-81dac80eec09",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "c5c2e4bc-fd7b-4b0f-a0aa-6427e83d1951",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "<Figure size 600x400 with 1 Axes>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 21,
    "id": "57a687b1-aa22-45bf-a74d-17e23847c15d",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 22,
    "id": "f6c0a01f-fff2-4cb4-a42e-b10d90bf9c25",
    "metadata": {},
    "outputs": [],
@@ -135,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 23,
    "id": "696eaedf-dcc4-4443-b8d8-2cc9296a18dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<abtem.waves.Probe at 0x30d56ce90>"
+       "<abtem.waves.Probe at 0x166dbbe30>"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 24,
    "id": "09261508-7b62-4d94-9109-9c5a0bbaf3a8",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 25,
    "id": "61fc947a-4fea-4166-acad-33290e012735",
    "metadata": {},
    "outputs": [],
@@ -205,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 26,
    "id": "2433fba5-ff34-46ed-9d64-8674d4ed96cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18cfdb17c42541a49425c8e92f9c67a0",
+       "model_id": "1a47536a2a0d4cbc850bac4ee9176f44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
        "Canvas(footer_visible=False, header_visible=False, layout=Layout(height='240px', width='675px'), resizable=Fal…"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 27,
    "id": "3d05c100-cdff-4700-884e-a72efbae70a4",
    "metadata": {},
    "outputs": [],
@@ -381,9 +381,11 @@
     "    toggle_button_visibility(propagate_button)\n",
     "    return None\n",
     "\n",
-    "def reset_callback(*args):\n",
+    "def reset_callback(*args,reset_positions = True):\n",
     "\n",
-    "    track_arrays[0] = np.array(potential.gpts)/2\n",
+    "    if reset_positions:\n",
+    "        track_arrays[0] = np.array(potential.gpts)/2\n",
+    "        \n",
     "    positions = track_arrays[0] * np.array(potential.sampling)\n",
     "    track_arrays[2] = probe.build(positions)\n",
     "    track_arrays[3] = np.zeros((potential.num_slices,potential.gpts[1]),dtype=np.complex64)\n",
@@ -399,6 +401,16 @@
     "transmit_button.on_click(transmit_callback)\n",
     "propagate_button.on_click(propagate_callback)\n",
     "reset_button.on_click(reset_callback)\n",
+    "\n",
+    "def onclick(event):\n",
+    "    \"\"\" \"\"\"\n",
+    "    positions_px = np.array([event.ydata,event.xdata])\n",
+    "    \n",
+    "    if positions_px[0] is not None:\n",
+    "        track_arrays[0] = positions_px\n",
+    "        reset_callback(reset_positions=False)\n",
+    "\n",
+    "cid = fig.canvas.mpl_connect('button_press_event',onclick)\n",
     "\n",
     "def on_value_change(change):\n",
     "    play.value = track_arrays[4]\n",
@@ -421,14 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 28,
    "id": "f14f4dd6-28cd-4be4-9e0f-3ffd9cd0e52d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa583fee682c4a02bf6f91e6774f15e6",
+       "model_id": "4f8dd7b111914a85bc14c9f9c40385f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -436,7 +448,7 @@
        "VBox(children=(HBox(children=(Button(button_style='warning', description='transmit', style=ButtonStyle()), But…"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,6 +466,14 @@
     "    )\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bdacaa1-69dc-4fe6-aac7-70b57e36b95b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
