adding prism widget

--- a/notebooks/multislice-algorithm.ipynb
+++ b/notebooks/multislice-algorithm.ipynb
@@ -296,7 +296,7 @@
     "fig.canvas.layout.height = '240px'\n",
     "fig.canvas.toolbar_position = 'bottom'\n",
     "spec.tight_layout(fig)\n",
-    "fig.canvas"
+    "None"
    ]
   },
   {
