add scan and phonons notebooks

--- a/notebooks/12.1.direct-ptychography.ipynb
+++ b/notebooks/12.1.direct-ptychography.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "id": "b05c1645-e8fd-4099-bcee-e4a41cf66318",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "0a59a0c2-083b-46d2-b90c-f3b79dd97fde",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "id": "a340d7d6-12b7-4471-9f24-319bd2bd463c",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "44a17518-f0dc-4b05-ae24-2bfc97ad86aa",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "id": "f640cda7-8495-4c4f-ba78-61a471e79b33",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "352088a3-9975-4534-8839-931462b5efb5",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "id": "2046797d-bcf4-4a18-bbd3-5e38a64ee187",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "54846569-0209-42a8-aef5-50334f3e0dfc",
    "metadata": {},
    "outputs": [],
@@ -167,14 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "id": "12f39fc6-466a-4229-8348-a0ac0cdf3483",
    "metadata": {},
    "outputs": [],
    "source": [
     "def return_sorted_indices(dataset_real_space_FFT):\n",
+    "    \"\"\" \"\"\"\n",
     "    trotter_intensities = (dataset_real_space_FFT * dataset_real_space_FFT.conj()).sum((-1,-2)).real\n",
-    "    trotter_intensities[0,0] = 0.0\n",
+    "    trotter_intensities[0,0] = 0.0 # dc component\n",
+    "    \n",
+    "    df_indices = np.sqrt(qx**2 + qy**2) * wavelength * 1e3 > (semiangle * 2)\n",
+    "    trotter_intensities[df_indices] = 0.0 # df trotters\n",
     "    \n",
     "    sorted_i, sorted_j = np.unravel_index(\n",
     "        np.argsort(-trotter_intensities,axis=None),\n",
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "id": "50effb5c-2379-459e-8d01-444aa2fdadac",
    "metadata": {},
    "outputs": [],
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "id": "45caa42c-bb8b-4ee6-a540-dfc74f58ba2b",
    "metadata": {},
    "outputs": [],
@@ -248,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "55b98663-5619-46a3-b074-a03de3999cd3",
+   "execution_count": 77,
+   "id": "f2a5ca47-a9a5-4559-bd8a-68ddd5bab454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "id": "33e55fcd-1273-4932-8cc9-63c2c89ebdee",
    "metadata": {},
    "outputs": [],
@@ -277,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "id": "7167c9f9-f5a1-4402-be10-196a2ac431db",
    "metadata": {},
    "outputs": [],
@@ -292,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "id": "000454ca-2038-44b3-8b7b-729be8b1c87f",
    "metadata": {},
    "outputs": [],
@@ -310,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 81,
    "id": "01d92d43-c8c6-4c41-9208-5cc9125238d5",
    "metadata": {},
    "outputs": [],
@@ -393,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 82,
    "id": "e08824a8-4cc3-48f6-ac19-f2ff15679f20",
    "metadata": {},
    "outputs": [],
@@ -408,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 83,
    "id": "dc5043f7-70f0-4f78-91fa-c557cea7ff3c",
    "metadata": {},
    "outputs": [],
@@ -585,14 +589,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "id": "25894714-b894-40fd-bc1c-e15c6e3bb94c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d05a48f18e742a6988d7eab5f18e7f2",
+       "model_id": "8587e5a4f48041c2a4994aa55ae660fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -600,7 +604,7 @@
        "VBox(children=(HBox(children=(Label(value='simulated dataset:'), ToggleButtons(layout=Layout(height='30px', wi…"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,15 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3452634b-8e20-455e-b352-92f72f69cb41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f52199d-a576-4ad4-85b9-38178d1766d5",
+   "id": "b5b794bc-b8ca-4c65-abdd-0afdb549e516",
    "metadata": {},
    "outputs": [],
    "source": []
